--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <input class="task-input" type="text" placeholder="Enter task here...">
                 <select name="tasks-priority" id="task-priority-select" required>
                 </select>
-                    <button class="add-button">Add</button>
+                    <button class="add-button">Add Task</button>
             </div>
             <div class="lists-container">
                 <div class="tasks-list-container">
