Animation and Sort/Filter dropdown

--- a/index.html
+++ b/index.html
@@ -19,6 +19,20 @@
             <div class="lists-container">
                 <div class="tasks-list-container">
                     <h2>ToDo Tasks</h2>
+                    <div class="list-actions-container">
+                        <div class="sorting-container">
+                            <label for="sort-priority">Sort:
+                                <select name="sort-priority" class="sort-priority-select">
+                                </select>
+                            </label>
+                        </div>
+                        <div class="filter-container">
+                            <label for="filter-priority">Filter:
+                                <select name="filter-priority" class="filter-priority-select">
+                                </select>
+                            </label>
+                        </div>
+                    </div>
                     <div class="todo-list-container">
                         <!-- new tasks here -->
                         <!-- <div class="task high">
@@ -38,6 +52,20 @@
                 <div class="additional-list-container">
                     <div class="completed-tasks">
                         <h2>Completed Tasks</h2>
+                        <div class="list-actions-container">
+                            <div class="sorting-container">
+                                <label for="sort-priority">Sort:
+                                    <select name="sort-priority" class="sort-priority-select">
+                                    </select>
+                                </label>
+                            </div>
+                            <div class="filter-container">
+                                <label for="filter-priority">Filter:
+                                    <select name="filter-priority" class="filter-priority-select">
+                                    </select>
+                                </label>
+                            </div>
+                        </div>
                         <div class="completed-tasks-list-container">
                             <!-- completed tasks here -->
                             <!-- <div class="task high">
@@ -56,6 +84,20 @@
                     </div>
                     <div class="deleted-tasks">
                         <h2>Deleted Tasks</h2>
+                        <div class="list-actions-container">
+                            <div class="sorting-container">
+                                <label for="sort-priority">Sort:
+                                    <select name="sort-priority" class="sort-priority-select">
+                                    </select>
+                                </label>
+                            </div>
+                            <div class="filter-container">
+                                <label for="filter-priority">Filter:
+                                    <select name="filter-priority" class="filter-priority-select">
+                                    </select>
+                                </label>
+                            </div>
+                        </div>
                         <div class="deleted-tasks-list-container">
                             <!-- deleted tasks here -->
                             <!-- <div class="task high">
